--- a/app/src/main/res/layout/wordcloud_activity.xml
+++ b/app/src/main/res/layout/wordcloud_activity.xml
@@ -23,6 +23,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:lines="6"
+        android:fadeScrollbars="false"
         android:inputType="textMultiLine"
         android:layout_alignTop="@+id/inputTxtView"
         android:layout_alignParentStart="true"
