--- a/app/src/main/res/menu/menu_word_input.xml
+++ b/app/src/main/res/menu/menu_word_input.xml
@@ -2,8 +2,13 @@
        xmlns:tools="http://schemas.android.com/tools"
     tools:context="net.denryu.android.wordcloud.WordInputActivity">
     <item
-        android:id="@+id/item_share"
-        android:title="Share"
+    android:id="@+id/item_share"
+    android:title="Share"
+    />
+
+    <item
+        android:id="@+id/item_clear_history"
+        android:title="Clear History"
         />
 
     <item
