task11 solved, partially.
App is now able to get character/texts from other apps. However, it’s
not possible to ‘open’ the txt file directly and load texts inside the
file.

--- a/app/src/main/res/layout/wordcloud_activity.xml
+++ b/app/src/main/res/layout/wordcloud_activity.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/inputTxtView"
         android:layout_alignParentStart="true">
 
-        <EditText
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/txtInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
