--- a/app/src/main/res/menu/menu_word_input.xml
+++ b/app/src/main/res/menu/menu_word_input.xml
@@ -1,10 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+       xmlns:tools="http://schemas.android.com/tools"
     tools:context="net.denryu.android.wordcloud.WordInputActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    android:id="@+id/item_share"
+    android:title="Share"
+    />
+
+    <item
+        android:id="@+id/item_clear_history"
+        android:title="Clear History"
+        />
+
+    <item
+        android:id="@+id/about"
+        android:title="About"
+        />
 </menu>
