--- a/app/src/main/res/menu/menu_word_input.xml
+++ b/app/src/main/res/menu/menu_word_input.xml
@@ -1,18 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.denryu.android.wordcloud.WordInputActivity">
-    <item
-    android:id="@+id/item_share"
-    android:title="Share"
-    />
-
-    <item
-        android:id="@+id/item_clear_history"
-        android:title="Clear History"
-        />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/about"
         android:title="About"
-        />
+        app:showAsAction="always" />
 </menu>
