--- a/app/src/main/res/menu/menu_word_history.xml
+++ b/app/src/main/res/menu/menu_word_history.xml
@@ -2,13 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item_share"
-        android:title="Share"
+        android:id="@+id/item_new_input"
+        android:title="New"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/item_history"
-        android:title="History"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/item_clear_history"
+        android:title="Clear DB"
+        app:showAsAction="ifRoom"/>
 
 </menu>
