--- a/app/src/main/res/layout/wordcloudhistory_activity.xml
+++ b/app/src/main/res/layout/wordcloudhistory_activity.xml
@@ -5,27 +5,23 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/historyTxtView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="10dp"
-        android:clickable="false"
-        android:text="@string/stringHistory"
-        android:textAllCaps="true"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-        <ListView
-            android:id="@+id/historyListView"
+    <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="28dp"
             android:fadeScrollbars="false"
             android:scrollbars="vertical"
             android:textColorLink="@color/colorPrimaryDark" />
+
+    <TextView android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No data"/>
+
+    <TextView
+        android:id="@+id/currItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
 
 </RelativeLayout>
