--- a/app/src/main/res/menu/menu_word_output.xml
+++ b/app/src/main/res/menu/menu_word_output.xml
@@ -11,4 +11,9 @@
         android:title="History"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/item_new_input"
+        android:title="New"
+        app:showAsAction="ifRoom" />
+
 </menu>
