deletes un-used lines

--- a/app/src/main/res/layout/wordcloud_output.xml
+++ b/app/src/main/res/layout/wordcloud_output.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/wordCloud"
-        android:layout_alignParentStart="true"
-        >
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/mostWord"
