sets weigh for layout & filters words such as "the, a, an"

--- a/app/src/main/res/layout/wordcloud_output.xml
+++ b/app/src/main/res/layout/wordcloud_output.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <net.alhazmy13.wordcloud.WordCloudView
         android:id="@+id/wordCloud"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:layout_weight="2"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -116,4 +116,4 @@
             android:textSize="25sp" />
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
