--- a/app/src/main/res/layout-land/wordcloud_output.xml
+++ b/app/src/main/res/layout-land/wordcloud_output.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <net.alhazmy13.wordcloud.WordCloudView
         android:id="@+id/wordCloud"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="300" />
+        android:layout_height="match_parent"
+        android:layout_weight="50" />
 
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/wordCloud"
-        android:layout_alignParentStart="true">
+        android:layout_width="136dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/mostWord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/inputTxtView"
-            android:layout_below="@+id/generateButton"
-            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:text="@string/buzzWord"
@@ -36,44 +32,37 @@
             android:id="@+id/commonWord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/linearLayout"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:textSize="25dp"
-            android:text="COMMON WORD!"
-             />
+            android:text="@string/common_word"
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/appearanceRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/mostWord"
             android:layout_below="@+id/mostWord"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:text="@string/appearanceRate"
             android:textAllCaps="true"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="ObsoleteLayoutParam" />
 
         <TextView
             android:id="@+id/appearanceResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/commonWord"
-            android:layout_below="@+id/commonWord"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="PERCENTAGE!"
+            android:text="@string/percentage"
             android:textSize="25sp" />
 
         <TextView
             android:id="@+id/uniqueWords"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/appearanceRate"
-            android:layout_below="@+id/appearanceRate"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:text="@string/uniqueWords"
@@ -85,18 +74,15 @@
             android:id="@+id/distinctResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/appearanceResult"
-            android:layout_below="@+id/appearanceResult"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="DISTINCT WORD!"
+            android:text="@string/distinct_word"
             android:textSize="25sp" />
 
         <TextView
             android:id="@+id/totalCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/uniqueWords"
             android:layout_below="@+id/uniqueWords"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
@@ -109,11 +95,9 @@
             android:id="@+id/totalCountings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/distinctResult"
-            android:layout_below="@+id/distinctResult"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="TOTAL COUNTS!"
+            android:text="@string/total_counts"
             android:textSize="25sp" />
 
     </LinearLayout>
